finished connected components

--- a/spectral/Matrix Kernel.ipynb
+++ b/spectral/Matrix Kernel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
        "       [ -2,   1,   2,  -3]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +70,7 @@
        "       [ 0.66666667,  1.        ,  0.        ]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
        "       [  0.        ,   0.        ,   0.2       ,  -0.2       ]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +118,7 @@
        "         5.00000000e+00])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +142,7 @@
        "       [ 0. ,  0. ,  0. ]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -180,7 +180,7 @@
     "    b = around(b,6)  #cutting off at 6 decimal places\n",
     "    for i in reversed(range(b.shape[0])):\n",
     "        if(b[i][i] == 0):\n",
-    "            print(\"woh, zero\")\n",
+    "            #print(\"woh, zero\")\n",
     "            continue\n",
     "        b[i] = b[i]/b[i][i]\n",
     "        if(i != 0):\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -212,7 +212,7 @@
        "       [ 0. ,  0. ,  0. ,  0. ,  0. ]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -260,7 +260,7 @@
        "       [ 0.,  0.,  0.,  0.,  0.]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -287,7 +287,7 @@
        "       [ 0. ,  0. , -1. ,  1. ]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -308,19 +308,19 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 8, -1, -1, -1, -1, -1, -1, -1, -1,  0],\n",
-       "       [-1,  6, -1, -1,  0, -1,  0, -1, -1,  0],\n",
-       "       [-1, -1,  5, -1,  0, -1, -1,  0,  0,  0],\n",
-       "       [-1, -1, -1,  7, -1, -1,  0,  0, -1, -1],\n",
-       "       [-1,  0,  0, -1,  7, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1,  6,  0,  0,  0, -1],\n",
-       "       [-1,  0, -1,  0, -1,  0,  6, -1, -1, -1],\n",
-       "       [-1, -1,  0,  0, -1,  0, -1,  5, -1,  0],\n",
-       "       [-1, -1,  0, -1, -1,  0, -1, -1,  6,  0],\n",
-       "       [ 0,  0,  0, -1, -1, -1, -1,  0,  0,  4]])"
+       "array([[ 5, -1, -1,  0, -1,  0, -1, -1,  0,  0],\n",
+       "       [-1,  6, -1,  0,  0, -1, -1, -1, -1,  0],\n",
+       "       [-1, -1,  5,  0, -1, -1, -1,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  1,  0,  0, -1,  0,  0,  0],\n",
+       "       [-1,  0, -1,  0,  5, -1, -1,  0,  0, -1],\n",
+       "       [ 0, -1, -1,  0, -1,  6, -1, -1, -1,  0],\n",
+       "       [-1, -1, -1, -1, -1, -1,  8, -1, -1,  0],\n",
+       "       [-1, -1,  0,  0,  0, -1, -1,  6, -1, -1],\n",
+       "       [ 0, -1,  0,  0,  0, -1, -1, -1,  5, -1],\n",
+       "       [ 0,  0,  0,  0, -1,  0,  0, -1, -1,  3]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -361,33 +361,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "woh, zero\n",
-      "woh, zero\n"
+      "[True, True, True, True, True, True, True, True, True, True]\n",
+      "[True, True, True, True, True, True, True, True, True, True]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def test():\n",
-    "    A = make_rand_weighted_L(7)\n",
+    "def test_weighted(n):\n",
+    "    A = make_rand_weighted_L(n)\n",
     "    a = gaussian_elim(A)\n",
     "    b,c = lu(A, permute_l=True)\n",
     "    return np.array_equal(row_echelon(a) ,row_echelon(c))\n",
-    "test()"
+    "\n",
+    "def test_unweighted(n, p):\n",
+    "    A = make_rand_unweighted_L(n, p)\n",
+    "    a = gaussian_elim(A)\n",
+    "    b,c = lu(A, permute_l=True)\n",
+    "    return np.array_equal(row_echelon(a) ,row_echelon(c))\n",
+    "    \n",
+    "print([test_weighted(randint(1,45)) for i in range(10)])\n",
+    "print([test_unweighted(randint(1,45), rand()) for i in range(10)])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -395,19 +393,29 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 3.02806384, -0.79186279, -1.32849967, -0.90770137],\n",
-       "       [-0.79186279,  2.2564115 , -0.49011014, -0.97443857],\n",
-       "       [-1.32849967, -0.49011014,  2.73751134, -0.91890153],\n",
-       "       [-0.90770137, -0.97443857, -0.91890153,  2.80104147]])"
+       "2"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A"
+    "def connected_components(L):\n",
+    "    n = L.shape[0]\n",
+    "    b = np.copy(L.astype(float)) \n",
+    "    out = 0\n",
+    "    for i in range(n):\n",
+    "        if(b[i][i] == 0):\n",
+    "            out += 1\n",
+    "            continue\n",
+    "        for j in range(i+1,n):\n",
+    "            b[j] = b[j] - b[i]*b[j][i]/b[i][i]  \n",
+    "    return out\n",
+    "\n",
+    "L = array([[2,-1,-1.0,0,0],[-1,2,-1,0,0],[-1,-1,2,0,0],[0,0,0,1,-1],[0,0,0,-1,1]])\n",
+    "connected_components(L)"
    ]
   },
   {
