--- a/spectral/Matrix Kernel.ipynb
+++ b/spectral/Matrix Kernel.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -396,7 +396,7 @@
        "2"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,28 +404,19 @@
    "source": [
     "def connected_components(L):\n",
     "    n = L.shape[0]\n",
-    "    b = np.copy(L.astype(float)) \n",
+    "    b = L.astype(float) #2 for 1: Takes care of deep copy and the float bug\n",
     "    out = 0\n",
     "    for i in range(n):\n",
     "        if(b[i][i] == 0):\n",
     "            out += 1\n",
     "            continue\n",
     "        for j in range(i+1,n):\n",
-    "            b[j] = b[j] - b[i]*b[j][i]/b[i][i]  \n",
+    "            b[j] -= b[i]*b[j][i]/b[i][i]  \n",
     "    return out\n",
     "\n",
     "L = array([[2,-1,-1.0,0,0],[-1,2,-1,0,0],[-1,-1,2,0,0],[0,0,0,1,-1],[0,0,0,-1,1]])\n",
     "connected_components(L)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
