--- a/spectral/Matrix Kernel.ipynb
+++ b/spectral/Matrix Kernel.ipynb
@@ -17,7 +17,7 @@
    ],
    "source": [
     "%pylab inline\n",
-    "from scipy.linalg import lu\n"
+    "from scipy.linalg import lu"
    ]
   },
   {
