--- a/spectral/Laplacian and eigenpairs.ipynb
+++ b/spectral/Laplacian and eigenpairs.ipynb
@@ -197,8 +197,93 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pylab inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "L = array([[2,-1,-1.0,0,0],[-1,2,-1,0,0],[-1,-1,2,0,0],[0,0,0,1,-1],[0,0,0,-1,1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.81649658  0.40824829  0.40824829 -0.         -0.        ]\n",
+      "[ 0.57735027  0.14433757  0.14433757 -0.         -0.        ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.61237243569579447"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = len(L)\n",
+    "k = 0\n",
+    "D = -norm(L[:,k])\n",
+    "d = L[:,k]/D\n",
+    "print(d)\n",
+    "d_k = d[k]\n",
+    "v = zeros(n)\n",
+    "v[k] = sqrt(0.5*(1 - (d_k)/D))\n",
+    "p = -D*v[k]\n",
+    "for i in range(k+1,n):\n",
+    "    v[i] = d[i]/(2*p)\n",
+    "print(v)\n",
+    "norm(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
