qr slowly coming

--- a/spectral/Tridiagonal.ipynb
+++ b/spectral/Tridiagonal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,7 @@
        "       [ 2,  1, -2, -1]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -61,14 +61,14 @@
        "       [ 0.    ,  0.    , -0.9067,  1.9867]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "A = array([[4,1,-2,2],[1,2,0,1],[-2,0,3,-2],[2,1,-2,-1]])\n",
-    "for k in range(n-1):\n",
+    "for k in range(len(A)-1):\n",
     "    n = len(A)\n",
     "    a = A[:,k]\n",
     "    lower_norm = sqrt(sum([a[i]**2 for i in range(k+1,n)]))\n",
@@ -80,6 +80,45 @@
     "        w[i] = a[i]/(2*r)\n",
     "    p = eye(n) - 2*outer(w,w.T)\n",
     "    A = dot(dot(p,A),p)\n",
+    "around(A, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-5.    , -1.6   ,  3.6   , -2.2   ],\n",
+       "       [-0.    , -1.8547, -0.9489,  0.2804],\n",
+       "       [ 0.    , -0.    , -1.7719, -0.105 ],\n",
+       "       [-0.    ,  0.    , -0.    , -2.2517]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = array([[4,1,-2,2],[1,2,0,1],[-2,0,3,-2],[2,1,-2,-1]])\n",
+    "for k in range(len(A)-1):\n",
+    "    n = len(A)\n",
+    "    a = A[:,k]\n",
+    "    lower_norm = sqrt(sum([a[i]**2 for i in range(k,n)]))\n",
+    "    alpha = - (sign(a[k])) * lower_norm\n",
+    "    r = sqrt(0.5*(alpha**2 - a[k]*alpha))\n",
+    "    w = zeros(n)\n",
+    "    w[k] = (a[k] - alpha)/(2*r)\n",
+    "    for i in range(k+1,n):\n",
+    "        w[i] = a[i]/(2*r)\n",
+    "    p = eye(n) - 2*outer(w,w.T)\n",
+    "    A = dot(p,A)\n",
+    "    \n",
     "around(A, 4)"
    ]
   },
