second QR algorithm completed

--- a/spectral/Tridiagonal.ipynb
+++ b/spectral/Tridiagonal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,7 @@
        "       [ 2,  1, -2, -1]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -61,7 +61,7 @@
        "       [ 0.    ,  0.    , -0.9067,  1.9867]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -93,33 +93,93 @@
     {
      "data": {
       "text/plain": [
-       "array([[-5.    , -1.6   ,  3.6   , -2.2   ],\n",
-       "       [-0.    , -1.8547, -0.9489,  0.2804],\n",
-       "       [ 0.    , -0.    , -1.7719, -0.105 ],\n",
-       "       [-0.    ,  0.    , -0.    , -2.2517]])"
+       "array([ 13.87058484,   8.62043436,   2.5089808 ])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A = array([[4,1,-2,2],[1,2,0,1],[-2,0,3,-2],[2,1,-2,-1]])\n",
-    "for k in range(len(A)-1):\n",
+    "def tamu_QR(a):\n",
+    "    #based on http://www.math.tamu.edu/~dallen/linear_algebra/chpt6.pdf\n",
+    "    #actually, Im totally messing it up... but it seems to work???\n",
+    "    #I think I understand why it works now\n",
+    "    A = a.astype(float)\n",
     "    n = len(A)\n",
-    "    a = A[:,k]\n",
-    "    lower_norm = sqrt(sum([a[i]**2 for i in range(k,n)]))\n",
-    "    alpha = - (sign(a[k])) * lower_norm\n",
-    "    r = sqrt(0.5*(alpha**2 - a[k]*alpha))\n",
-    "    w = zeros(n)\n",
-    "    w[k] = (a[k] - alpha)/(2*r)\n",
-    "    for i in range(k+1,n):\n",
-    "        w[i] = a[i]/(2*r)\n",
-    "    p = eye(n) - 2*outer(w,w.T)\n",
-    "    A = dot(p,A)\n",
+    "    for j in range(20):\n",
+    "        for k in range(n-1):\n",
+    "            a = A[:,k]\n",
+    "            lower_norm = sqrt(sum([a[i]**2 for i in range(k,n)]))\n",
+    "            alpha = - (sign(a[k])) * lower_norm\n",
+    "            r = sqrt(0.5*(alpha**2 - a[k]*alpha))\n",
+    "            w = zeros(n)\n",
+    "            w[k] = (a[k] - alpha)/(2*r)\n",
+    "            for i in range(k+1,n):\n",
+    "                w[i] = a[i]/(2*r)\n",
+    "            p = eye(n) - 2*outer(w,w.T)\n",
+    "            R = dot(p,A)\n",
+    "            A = dot(R,p)\n",
+    "\n",
+    "  \n",
+    "    return array([A[i][i] for i in range(n)])\n",
     "    \n",
-    "around(A, 4)"
+    "    \n",
+    "A = array([[8,-2,-2],[-2,4,-2],[-2,-2,13]]) \n",
+    "tamu_QR(A)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.46703711,  1.47051509,  0.92393225])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def tamu_QR2(a):\n",
+    "    #broken.... kind of confused\n",
+    "    #based on http://www.math.tamu.edu/~dallen/linear_algebra/chpt6.pdf\n",
+    "    A = a.astype(float)\n",
+    "    temp_A = a.astype(float)\n",
+    "    n = len(A)\n",
+    "    for j in range(40):\n",
+    "        Q = eye(n)\n",
+    "        for k in range(n-1):\n",
+    "            a = temp_A[:,k]\n",
+    "            lower_norm = sqrt(sum([a[i]**2 for i in range(k,n)]))\n",
+    "            alpha = - (sign(a[k])) * lower_norm\n",
+    "            r = sqrt(0.5*(alpha**2 - a[k]*alpha))\n",
+    "            w = zeros(n)\n",
+    "            w[k] = (a[k] - alpha)/(2*r)\n",
+    "            for i in range(k+1,n):\n",
+    "                w[i] = a[i]/(2*r)\n",
+    "            p = eye(n) - 2*outer(w,w.T)\n",
+    "            temp_A = dot(p, temp_A)\n",
+    "            Q = dot(p,Q)   \n",
+    "        R = dot(Q,A)\n",
+    "        A = dot(R,Q)\n",
+    "        temp_A = A.astype(float)\n",
+    "\n",
+    "  \n",
+    "    return array([A[i][i] for i in range(n)])\n",
+    "    \n",
+    "\n",
+    "A = array([[2,1,1],[1,2,1],[1,1,2]]) \n",
+    "#A = array([[8,-2,-2],[-2,4,-2],[-2,-2,13]]) \n",
+    "tamu_QR2(A)    "
    ]
   },
   {
