working on mstat

--- a/mStat1/HW 3.ipynb
+++ b/mStat1/HW 3.ipynb
@@ -32,6 +32,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$l(\\theta) = \\sum_{i=1}^n \\text{log} [f(X_i | \\theta)] = \\text{log} [ {10 \\choose 5} p^5 (1-p)^5] $$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXsAAAEACAYAAABS29YJAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAG3dJREFUeJzt3XmUHlWZx/FvdWcRErIHAiQQZQtkYYcgCg0Mmygh5gCK\nOuK+oKKDjBIdCZ7R0YODog7KKIOiHpwRdTRgwABpQQyQQEhCQgjZIAkhQiCsUUJ45o97e/Km877d\n71JVt5bf55w6eZeqWw/F20/dunXrXhARERERERERERERERERERERERERkYw4A1gGPAZ8IXAsIiKS\ngHZgBTAW6As8BBwcMiARkbJqS7DsY3DJfg2wFfglMCXB/YmISA1JJvu9gbUV79f5z0REJGVJJntL\nsGwREWlAnwTLXg+MqXg/Ble7r7QC2C/BGEREimYlsH/oICr1wQU1FuhH9Ru0qv1vNyN0ABkyI3QA\nGTEjdAAZMiN0ABnSVN5Msmb/GvAp4DZcz5zrgEcS3J+IiNSQZLIHmOUXEREJKMkbtNKYztABZEhn\n6AAyojN0ABnSGToAaY3a7EVEGtNU3lTNXkSkBJTsRURKQMleRKQElOxFREpAyV5EpASU7EVESkDJ\nXkSkBJTsRURKQMleRKQElOxFREog6YHQRAKxCBgIDPbLIP9+gP/3DUB//29f3N9CH3auAL2OG8H1\nNdz0mn8D/g5sAV72y0vAC8DzwGb3WaShQCRTosD7twzEILliQ3AT4eztl72APSqWEcBwYBguKT/v\nlxdwSbkrQW9he+Le6pdtuOTelagjXPJvx50Q+rL9BLEL7sTRdfIYhDupDPHrPQtsAp4B/gpsBJ4C\nnsRN7PMk8AREz8d5dKQUmsqboROtkr10Y+24CW8Ows1i1rWMBfbB/V7W4hLmemADLolu9MszuCS7\nCaJX0429i/XHnWyGAyOB3XEnolG4k9NeuBPVPriTy+PAGtxkP6twM7gtd59F29KNXXJAyV7yxNqB\nA4CJwHi/HAK8CVcTXo5LeitwCXA1LiluLk4TiUXAUFzSfyPbT2z74052I3EngKXAEr8sBlboJFBq\nmUr2VwJvB17F/Vg/gLuU7k7JvhSsLy6ZH+WXw4AJuKS+CHgYl8iWAo9B9EqgQDPGBuBOiIfgjt8E\nYBLuJLAYN9XnfL8shWhroEAlXZlK9qcCd+AuUb/hP/tilfWU7AvJRgHHA8f55TBcrXwe8ADwILAI\noheChZhrNhiX9I8AjgSOxl0dLADm+uUeiDYGC1GSlKlkX2kqMA14b5XvlOwLwUYDJwMn+GUE8Be2\nJ555EL0YLr4ysEHAMcBk3An2zbgrp7v8cidE68PFJzHKbN6cCVxQ47uCtL2WjQ0COwfsB2CPgj0N\n9iuwi8Amgun5jeCsDWwS2KfAbgLbBLYM7D/AzgbbLXSE0rSm8mYrZ4fZuN4F3U3HJXiAL+EuNafV\nKMOAKyred6K5JjPIIuBg4B3Ambimg7nAH4HbcU0yr4eLT3pnbcChwD8ApwPH4tr6/4D7e320ODe+\nC6fDL10uJ2M1+wuBe3B9kmvRjyuzrA3seLCrwFaArQW7Buwsf+NQcs0Ggr3dX52tB3sM7Ftgx+nK\nLPMylTfPwPWuGNHLepkKWqwN7K1g3wd7Emwx2Ayww33tXgrJIrAjwL4KtsQn/+/5k70Sf/ZkKm8+\nhut9scAv19RYL1NBl5cdCnalr70vApsOdmDoqCQUGwf2ZbCHwR4H+6a7FyMZkcu8mcugi8F2B/sc\n2ENga8D+FWx86Kgka2wi2NfBngB7EOxisJGhoyq5XObNXAadX9YGdprvnfEc2E/ATtKluvTO2sBO\nAbvB/3b+27/Xbyd9ucybuQw6f2wY2KVgq8AWgH3c98sWaYINBvsk2EJ/8/4SsKGhoyqRXObNXAad\nHzYe7Ee+JnYD2DG60SrxsQhsMtjP/W/sWrCDQ0dVArnMm7kMOtssAjsZ7A9gG8D+xbXPiyTJRoFd\nDvYU2EywE1WxSEwu82Yug84ma8M91Tof7BGwD4P19IyDSAJsF7CP4p6svh/3tK6SfrxymTdzGXS2\nWDvYu3yf+Pk+4eummQRmbWDT/D2ihWDn6XcZm1zmzVwGnQ0WgU31faHngp2pGpRkj0W4p67v90lf\nNf3W5TJv5jLo8OwUsHm+j/zb9ccj2WcR2BTcQ3v3gXWEjijHcpk3cxl0ODYe7BawlWDn67JY8sfa\nwC4AWw32e/XeaUou82Yug06fDccNWPVXsM/i5jgVyTHr7/vnP40bdnlY6IhyJJd5M5dBp8fawT7h\nk/zVenBFiseG+2S/Eewj7jcvvchl3sxl0Omwo3BjkfwJbFLoaESSZYeD3ePvRR0ROpqMy2XezGXQ\nybKBuDHknwL7R918lfKwCOwD/kr2SjRvQi25zJu5DDo5dipuBMqfgvU2F4BIQdnuYL/AjeV0cuho\nMiiXeTOXQcfPBuJmgXoC7PTQ0Yhkg70NbB3Yd8F2DR1NhuQyb+Yy6HjZ8b4r5fVgQ0JHI5ItNhTs\nZ2DLwSaHjiYjMpk3LwFeB2p1q8pk0OmwdrCv+Lb5KaGjEck2e6f/W7lMz5dkL2+OAW4FVqNk342N\nBusEuxNsr9DRiOSDjfa9024v+d9N5vLmr4BJKNl3Y6f6GsqX1KdYpFH/f0W8Aeyk0NEEkqm8OQX4\ntn+tZA/4x8QvA3sS7MTQ0Yjkm53iE/6lJeye3FTe7NPCDmcDo6p8/iXgMuC0is96+p8xo+J1p18K\nxgYBNwC7A0dDtD5wQCI5F90BdixwE3As2IUQvRQ4qKR0+CVzJgAbcTX61cBWYA0u0XVXgpq9jcWN\nNf9DsH6hoxEpFusP9mPcCLBjQkeTkszmzRI349hxvtnmMyW81BRJiUV+ULV1YEeHjiYFmc2bqyhl\nsrfz/WPfZ4WORKQc7GzcKJrTQkeSsFzmzVwG3Tv7tK9lHBo6EpFyscPB1oN9PHQkCcpl3sxl0LVZ\nBPZV/7Tf2NDRiJST7eefSv9KQZtPc5k3cxl0ddaGm2BkvhvISUTCsVG4yc6/V8AnbnOZN3MZ9M6s\n3Y9t8yew3UJHIyIANhjsz2D/WbCEn8u8mcugd2TtYDf4oQ80/rZIpthuYHeDXVeghJ/LvJnLoLez\ndrCf+7E6NASrSCbZQH/V/ZOCDFGSy7yZy6Adi3xt4XawXUJHIyI9sQF+8MEfFuCmbS7zZi6D9on+\n38HudbUGEck+G+Q7UHw9dCQtymXezGXQYNP9EAi1HhYTkUyyEWCPuAHUciuXeTOHQdtHfR/ePUNH\nIiLNsNG4uZ4/EDqSJuUwb+YuaDsdNxb9/qEjEZFW2EFgG8nnhOY5y5tOjoK2CX6sm7eEjkRE4mAn\n+YQ/LnQkDcpR3twuJ0HbKH/Z957QkYhInOxC3yw7MnQkDchJ3txRDoK2/mBzwa4IHYmIJMG+5h+8\n6hs6kjrlIG/uLAdB2zVgvy1A31wRqcrawGaCfSd0JHXKQd7cWcaDtvf5ESwHh45ERJJkQ31zzrtC\nR1KHjOfN6jIctB2KmwhhYuhIRCQNdpj/mx8fOpJeZC5vfhp4BHgY+GaNdTIXtGODwVaAXRA6EhFJ\nk10I9mjGR6/NVN48CZgNdN3wqHWnO1NBb2c3gF0bOgoRCcGuB/tx6Ch6kKm8+T9APQ8rZCpox873\nZ3YNVyxSSrabb7+fGjqSGjKVNxcAM4B7gU7gqBrrZSposDH+wala8YpIKdhx/oGrvUJHUkVTebNP\nCzucDYyq8vmXfLlDgcnA0bia/ptqlDOj4nWnXwKwNuCnwHcgmh8mBhHJhmgu2A+A68HOhOj1gMF0\n+CWTZgEnVrxfAQyvsl6Gavb2Of9gRREmNxCRllkf/0DlRaEj6SZDeRM+BnQ9cXog8ESN9TIStI0F\newbsgNCRiEiW2ME+N4wJHUmFjORNpy/wM2Ax8AC1L0EyELRFYLPALgsdiYhkkV0O9rsMPUWfgbzZ\nuAwEbe8GW5SjcTFEJFXWH2wp2LTQkXgZyJuNCxy0DQfbAHZs2DhEJNvsLWDrwYaEjoTgebM5oZP9\ndWDfDRuDiOSD/dD30AlNyb7BXR/pa/WDwsUgIvlhQ33f+0mhAwm8/6YECtoisLvAPhJm/yKST3YR\n2O2Bb9Yq2Tew22lgC9WnXkQaY338zdp3hAwi4L6bFiBo6+/HvTgl/X2LSP7ZmX78rH6hAgi035aE\nSPaXgv0+/f2KSHHYrWAXh9p5oP22JOWgbbh/Gu6gdPcrIsVi4/2giSG6YirZ17G7r2mcehGJh13v\nnq5Nf8cB9tmyFIO24WCbwPZNb58iUly2v28pSLt231TebIs7igz7J+AmiB4PHYiIFEG0ApgJhGq7\nz5WUavY2QrV6EYlfkNq9mnF62M3X1VYvIsmw68FmpLnDFPcVmxSCVq1eRJKUeu1ebfY1XAT8Rm31\nIpKMaAVwC/DJ0JGEcAxwP27i8Xm4eWirSbhmb/3BngI7JNn9iEi52aFg61KaFyNTzTidwOn+9ZnA\nnBrrJZ3s3w92W7L7EBEBsDluMqTkd9TMRkk142wABvvXQ4D1Ce2nBxbhukRdnf6+RaSErqaE3TD3\nBdbiJhpfB9SarDfBmr2d4AcrKsN9CREJztrBVoFNTnpHCZe/k9m4CcW7L2cDtwNT/Xrn+nWrSTLZ\n/9qNPS0ikhb7LNiNSe+kmY2SGoD/BaBrBqgI2Mz2Zp1KBlxR8b7TLy2yscADwL4QvdR6eSIi9bDB\nwGpgEkTrYiq0wy9dLie53N2wB4ET/etTcD1yqkmoZm/fcouISNrsavcgZ3I7SLDshh0F3Ac8BMwF\nDq+xXgJBWz8/9Oj+8ZctItIbGwf2pJvVKpkdJFRuopJI9lPA/hx/uSIi9bL73IxWyRSeULmJSiLZ\n/wbsw/GXKyJSL/sE2C+TKjyhchMVc9A2Aux5f5NERCQQGwa2GWxoEoU3s1HR+qC/G7gZoudDByIi\nZRY9C/wROC90JFkRd83+AbDT4i1TRKQZdhbY3CQKTqDMxMUYtE30AxG1x1emiEizrA/YBrCD4i64\nmY2K1IzzfuBnEG0LHYiICESvAb/A5abSi6lmb+3+DDounvJEROJgE8HWxjxGV5mbceytYA/FU5aI\nSJxsCdixcRbYzEZFacY5B/jf0EGIiFTxO1yOKrUYavYWga0AO6z1skRE4mbHgC2Ns8AYy0pNHMl+\nAtgaP1mJiEjGWBvY+hh75ZS2Gecc4HcQ5fJsJyJFF72Oa8qZEjqSkOKo2c8DO6n1ckREkmKngd0T\nV2ExlZOqFoO2MWCbEhxKVEQkBtYP7DmwUXEU1sxGeW/GORs3Fs5roQMREaktehW4FXhH6EhCabVm\nPxtsau/riYiEZueD3RJHQTGU0ZBzgSXANuCIbt9dBjwGLAN6GpishaBtiB/OeEDzZYiIpMUGgb0A\ntlurBcUSTgPGAQcCc9gx2R+Cm46wLzAWWEHt5qJWkv15YDc3v72ISNrsthhaI1Jvs18GLK/y+RTg\nRmArsAaX7I9pYT+1nAzcnkC5IiJJuQMI0nswiRu0ewHrKt6vA/ZOYD8dQGcC5YqIJKUTl7tS11uX\nxdlAta5C04GZDewn7klK9gRGAoviLVdEJFEPAvuCjYTo6TR33FuyP7WJMtcDYyrej/af1TKj4nUn\n9dXWO4C7/JNpIiI5Eb0G9mfgBODXdW7UQaCrge7mAEdWvO+6QdsPeCOwEqg1bk2TNX67Fuzi5rYV\nEQnJPg/2/VYKiC2UOk0F1gJbgKeAWRXfTcfdmF0GnN5DGc0m++Vgk5rbVkQkJDsK7OFWCogtlBQ1\nEbTtDfZMzDO/iIikxNrBNoPt3mwBzWyUx4TZAfxJ7fUikk/RNuBu4MQ095rXZN8ZOAYRkVbMIVB/\n+1CaacZZ4SbxFRHJKzuihdmrytBmb2PAnlZ7vYjkm7WDPdvkkMelaLPvQO31IpJ76bfb5y3Zn4Da\n60WkGDpRsq/pSGBe6CBERGIwjx0fSC20BtqerB/YK2C7JBeOiEhabDewl5uYVrXwbfbjgVUQbQkd\niIhI66IXcaMCj0tjb3lK9kcAC0IHISISowXA4WnsKE/J/nDc8KAiIkXxIDtP65qIPCV71exFpGhS\nq9mHVueNBmsHe8lNMi4iUhQ2Auz5Bh8ULfITtHYw2MpkQxERCcGeANuvkQ2a2UtemnHUXi8iRZVK\nu31ekr3a60WkqFJpt2812Z8LLAG2seOTYKcC83ETgs+n9aE8VbMXkaJ6kBzcpB0HHIgbm7nyMuQw\noGs0t/G4BweqqaPtySI/OtwezYcpIpJVNhpso8t19W2QaDi96J7sK0XAJqBvle/qSfZjwdY3G5iI\nSLZZBPZXsL3q3aCZvaTRZj8NeADY2uT2aq8XkQKLDJfjEr1JW88APLPZ3iRTaTows5dtxwPfwLXh\n1zKj4nUnOw9hrPZ6ESm6rnb7m6t81+GXTKjWjDMaeBQ4roft6mnGuQVsatORiYhknp0H9tt6V040\nlF7MYcfeOEOAhcA5vWxXT7Jf79rtRUSKyg4AW1PvyklGUstUYC2wBXgKmOU//zLwEq4dqmsZUWX7\nXoK2gX4M+7w8DyAi0gRrB/sbWP96Vk48nAT0luwngS1JJxQRkZBsOVg9Y9tntjdOK/YDVoUOQkQk\nBatwOS8ReUj2GgBNRMpgJSVO9m9CyV5EymElLuclIuvJXjV7ESmLUtfslexFpCwSbbMPrYe7ytYH\n7O91dkUSEck5GwC2pY6u5oXrjbMPsBGiv4cOREQkedHLwGag3gHRGpLlZK+bsyJSNondpM1ysld7\nvYiUTWLt9kr2IiLZkViPnKwnez09KyJlUtpkr5q9iJRJon3tQ6rRhcgisBfAhqYbjohISLYH2DO9\nrZRKKDGrlexHuknGRUTKxCKwF8EG97RSMyVntRlH7fUiUkKRkVCPnCwne7XXi0gZJdJu30qyPxdY\nAmyj+qzo++Bmq7qkibKV7EWkrDJXs1+Mm5bwrhrfXwXc0mTZenpWRMoqkadoW0n2y4DlNb47B3d2\nWtpk2arZi0hZZa4Zp5aBwD8DM1ooQzdoRaSsEmnG6dPL97OBUVU+nw7MrLHNDODbwCtAVEcMMype\nd4LdDwwD1texrYhI0TwO7AnWD6JXgQ6/BDeHHW/Q3gWs9stzwCbgkzW2rdJf1CaALYs3RBGRPLFV\nYAfW+rKZEnur2dersgZ/QsXry4EXgWsaKGs08EQcQYmI5NQTwBhq3xdtWCtt9lOBtcBkXK+bWbFE\nBCOAp2MqS0Qkj54GhsdZYCs1+9/6pSdXNFHuCKC3sSFERIrsGVwujE0Wn6BVsheRsnsGGBlngVlM\n9iNRsheRclPNXkSkBEqT7HWDVkTK7GlKkuxVsxeRMitNzV7JXkTKLPZkH1q3J8GsDWwrWN8w4YiI\nZIHtCvY3N3PVzl82U2LWavZDgJch2ho6EBGRcKJXgNeBAXGVmLVkr5uzIiJOrDdps5js1V4vIhJz\nu72SvYhINinZi4iUQKxDJijZi4hkU6Fr9hoXR0TEKXSyV28cERFHvXFEREogMzX7c4ElwDZ2nIMW\nYBIwF3gYWAT0r7NMJXsRESf2Me2bNQ44kJ0nHO8DLAQm+vdDqX1S6T5cwmM9TLIrIlIiNgFsabUv\nmimtlWkJl9X4/DRcbX6xf/9cA2WqZi8i4mSmGaeWA3BnnluBB4BL69vM+gIDgc0JxCQikjebgGFu\ngMjW9Vaznw2MqvL5dGBmjW36Am8BjgK2AHfgkv6dNdaf4f7ZfSD84kU47fVeYhIRKYFoK9iLMPEs\n4MjQ0cDObfbnAz+peP9l4PM1tq1oe7IJYEtijk1EJMeq3scMOsRx5ZjLt+Fuzu6Cu3I4Eddrpzdq\nrxcR2VFsPXJaSfZTgbXAZOAWYJb/fDNwFTAPWIBrwplVrYBulOxFRHZUmBmrKptxPg52bbhQRESy\nxq4H+1D3D5spKUtP0I5EQyWIiFSKbciELCV7NeOIiOwotmYcJXsRkezKxA3auCnZi4jsSDV7EZES\nULIXESmBQna9fAVsQLhQRESyxoaCdR8vrKmul6H5oG1XsC1gUc+ri4iUibWBbQXrV/lhMyVlpRnH\nN+FEuTxjiYgkI3odeBYY3mpJGUv2IiLSTSzt9kr2IiLZVrhkr6ESRER2FsuQCVlK9qrZi4jsrFA1\n+5Eo2YuIVBPLkAmtTDgep9WoGUdEpJr5wKCQAZyLm4FqGztOS/gG4EZgEbAU+GIPZairpYhIY1LP\nm+OAA9l5DtoLccke3NSEq4F9apShZL9dR+gAMqQjdAAZ0RE6gAzpCB1AhqT+UNUyYHmVzzcAA4B2\n/++rwAst7KcsOkIHkCEdoQPIiI7QAWRIR+gA8i6JG7S34ZL7BmANcCVuXloREQmktxu0s4FRVT6f\nDsyssc17cc03ewLDgLuBO3DNOSIiEkAcA4/NAS4BHvTvrwH+Avzcv78OuBX4VZVtVwD7xRCDiEhZ\nrAT2b3SjuLpeVp40lgEn45L9AGAy8O0a2zUcsIiIpGsqsBbYAjwFzPKf98cl+sW4rpmXBIlORERE\nRETidQauaecx4As11vmu/34hcHhKcYXQ27F4D+4YLALuASalF1rq6vldABwNvAa8M42gAqnnWHQA\nC4CHgc5Uogqjt2MxAncP8CHcsbgwtcjS9V/ARlwLSS2ZypvtuJuwY4G+uP9BB3db523AH/zrY4F7\n0wouZfUci+OAwf71GZT7WHStdydwMzAtreBSVs+xGIJrEh3t3xdiTtIq6jkWM4B/869HAJvIzrAv\ncXorLoHXSvYN582kB0I7Bvc/bw2wFfglMKXbOmcDP/Wv78P9sPdIOK4Q6jkWc4Hn/ev72P7HXTT1\nHAuATwM3Uexxk+o5FhcAvwbW+fdFHTSwnmOxge3jxAzCJfvXUoovTXcDz/XwfcN5M+lkvzfuJm6X\ndf6z3tYpYpKr51hU+hDbz9xFU+/vYgrwA/++qENr1HMsDsA9szIHNyjW+9IJLXX1HIsfAeOBJ3HN\nFxenE1rmNJw3k778qfcPtHt//yL+YTfy33QS8EHg+IRiCa2eY/Ed3CB6hvt9FHUy+nqORV/c+FOn\nALvirgDvxbXXFkk9x2I6rnmnA/eMzmzgUODF5MLKrIbyZtLJfj0wpuL9GLZfitZaZ7T/rGjqORbg\nbsr+CNdm39NlXJ7VcyyOxF3Gg2ubPRN3af/7xKNLVz3HYi2u6WaLX+7CJbiiJft6jsWbga/51ytx\nT+YfhLviKZPM5c0+uP8hY4F+9H6DdjLFvSlZz7HYB9dmOTnVyNJXz7GodD3F7Y1Tz7EYB9yOu4G5\nK+6m3SHphZiaeo7FVcDl/vUeuJPBsJTiS9tY6rtBm5m8eSbwKC6JXeY/+5hfunzff7+QHYdLLpre\njsWPcTecFvjl/rQDTFE9v4suRU72UN+x+DyuR85i4DOpRpeu3o7FCNy4XAtxx+KCtANMyY24+xKv\n4q7sPkh586aIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiISOP+D0xFZrZu0EJzAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0xb05a0e0c>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x = linspace(0.01,0.99,100)\n",
+    "plot(x, log(252*(x**5)*(1-x)**5));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<b>7.)</b> Suppose that X follows a geometric distribution,\n",
     "\n",
     "$$P(X = k) = p(1 − p)^{k−1}$$\n",
@@ -39,6 +69,34 @@
     "and assume an i.i.d. sample of size n.\n",
     "\n",
     "c. Find the asymptotic variance of the mle."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$I (\\theta) = \\mathbb{E} \\left[ \\left(\\frac {\\partial}{\\partial \\theta} l( \\theta) \\right)^2 \\right] = - \\mathbb{E} \\left[ \\frac {\\partial^2}{\\partial \\theta^2} l(\\theta)  \\right]$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$I (\\theta) = -\\mathbb{E} \\left[ \\frac {\\partial^2}{\\partial \\theta^2} (n \\ln p  + n(\\bar{X} - 1) \\ln(1-p)) \\right] =-\\mathbb{E}  \\left[ -\\frac n {p^2} - \\frac{n( \\bar{X} - 1)}{(1-p)^2}\\right]= n \\left( \\frac 1 {p^2} + \\frac{1/p -1}{(1-p)^2} \\right) = \\frac n {p^2 (1-p)}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Therefore, the asymptotic variance is given by "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\frac {p^2 (1-p)} n$$ "
    ]
   },
   {
@@ -57,11 +115,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From last homework, I have\n",
+    "\n",
+    "$$\\frac {\\partial^2 l} {\\partial \\sigma^2}= n/\\sigma^2 - \\frac 2 {\\sigma^3}\\sum |X_i|$$\n",
+    "\n",
+    "Because $\\mathbb{E}[|X_i|] = \\sigma$\n",
+    "\n",
+    "$$I(\\sigma) = n/ \\sigma^2$$\n",
+    "\n",
+    "And therefore the asymptotic variance is given by\n",
+    "\n",
+    "$$\\sigma^2/n$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<b>35.)</b> (Bootstrap in Example A of Section 8.5.1) Let $U_1 , U_2 , . . . , U_{1029}$ be independent\n",
     "uniformly distributed random variables. Let $X_1$ equal the number of $U_i$ less than\n",
     ".331, $X_2$ equal the number between .331 and .820, and $X_3$ equal the number\n",
     "greater than .820. Why is the joint distribution of $X_1 , X_2 ,$ and $X_3$ multinomial\n",
     "with probabilities .331, .489, and .180 and n = 1029?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well the uniform distribution is equally likely to hit any number between zero and one. Therefore the probability that it is less than 0.331, is exactly 0.331. Therfore you would expect $X_1$ to equal 0.331 of the 1029 samples. Similar logic holds for the other brackets. "
    ]
   },
   {
@@ -114,9 +196,42 @@
     "\n",
     "a. Find the method of moments estimate of θ.\n",
     "\n",
+    "$$\\mathbb{E}[x] = \\int_{x_0}^{\\infty} \\theta x_0^{\\theta} x^{-\\theta}dx = \\frac{ \\theta x_0} {\\theta - 1}$$\n",
+    "\n",
+    "$$\\rightarrow ~~~~~ \\hat{\\theta} = \\frac {\\bar{X}}{\\bar{X} - X_0}$$\n",
+    "\n",
+    "\n",
     "b. Find the mle of θ.\n",
     "\n",
+    "$$l(\\theta) = \\sum [\\ln \\theta + \\theta \\ln x_0 - (\\theta +1)\\ln x_i ]$$\n",
+    "\n",
+    "$$\\partial_{\\theta} l(\\theta) = \\frac n {\\theta} + n \\ln x_0 - \\sum \\ln x_i$$ \n",
+    "\n",
+    "\n",
+    "\n",
     "c. Find the asymptotic variance of the mle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-0.8090169943749476-0.587785252292473j)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(-1)**(1.2)"
    ]
   },
   {
@@ -133,6 +248,8 @@
     "(This is an alternative parametrization of that of Example A in Section 3.6.2.)\n",
     "\n",
     "a. Find the method of moments estimate of θ .\n",
+    "\n",
+    "\n",
     "\n",
     "b. Find the mle of θ.\n",
     "\n",
