--- a/mStat1/HW 3.ipynb
+++ b/mStat1/HW 3.ipynb
@@ -207,31 +207,19 @@
     "\n",
     "$$\\partial_{\\theta} l(\\theta) = \\frac n {\\theta} + n \\ln x_0 - \\sum \\ln x_i$$ \n",
     "\n",
+    "$$\\rightarrow ~~~~~ \\hat{\\theta} = \\frac 1 {\\frac 1 n \\sum \\ln X_i - X_0}$$\n",
     "\n",
+    "Checking the second derivative:\n",
     "\n",
-    "c. Find the asymptotic variance of the mle."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-0.8090169943749476-0.587785252292473j)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(-1)**(1.2)"
+    "$$\\partial_{\\theta}^2 l(\\theta) = - \\frac n {\\theta^2} $$\n",
+    "\n",
+    "Which is always negative\n",
+    "\n",
+    "c. Find the asymptotic variance of the mle.\n",
+    "\n",
+    "Using our results from above yields an asymptotic variance of\n",
+    "\n",
+    "$$ \\frac {\\theta^2} n $$"
    ]
   },
   {
@@ -242,18 +230,36 @@
     "θ > 0:\n",
     "\n",
     "\n",
-    "$$f (x|θ ) = \\frac x {\\theta^2} e^{ −x^2 /(2θ )} ,   ~~~~ x \\geq 0$$\n",
+    "$$f (x|θ ) = \\frac x {\\theta^2} e^{ −x^2 /(2θ^2 )} ,   ~~~~ x \\geq 0$$\n",
     "\n",
     "\n",
     "(This is an alternative parametrization of that of Example A in Section 3.6.2.)\n",
     "\n",
     "a. Find the method of moments estimate of θ .\n",
     "\n",
+    "$$\\mathbb{E}[x] = \\int_0^\\infty \\frac {x^2} {\\theta^2} e^{ −x^2 /(2θ^2 )} = - \\partial_k \\int_{-\\infty}^\\infty  e^{ −x^2 k/(2θ^2 )} = -\\partial_k \\sqrt {\\frac {2\\pi \\theta^2} k} =  \\sqrt {\\frac {\\pi \\theta^2} 2}$$\n",
     "\n",
+    "$$\\rightarrow ~~~~~ \\hat{\\theta} = \\sqrt {\\frac 2 {\\pi} } \\bar{X}$$\n",
     "\n",
     "b. Find the mle of θ.\n",
     "\n",
-    "c. Find the asymptotic variance of the mle."
+    "$$l(\\theta) = \\sum [\\ln x_i - 2 \\ln \\theta - x_i^2 / 2 \\theta^2]$$\n",
+    "\n",
+    "$$\\partial_\\theta l (\\theta) = -2n / \\theta +\\sum x_i^2 / \\theta^3$$\n",
+    "\n",
+    "$$\\rightarrow ~~~~~~~ \\hat {\\theta} = \\sqrt { \\frac 1 {2n} \\sum X_i^2 }$$\n",
+    "\n",
+    "Checking the second derivative yields\n",
+    "\n",
+    "$$\\partial_\\theta^2 l (\\theta)|_{\\theta^2 = \\sum X_i^2 / 2n} = \\frac {2n} {\\theta^2} - \\frac {3 \\sum X_i^2}{\\theta^4} = - \\frac {4n} {\\theta^2}$$\n",
+    "\n",
+    "Which is always negative\n",
+    "\n",
+    "c. Find the asymptotic variance of the mle.\n",
+    "\n",
+    "From above, we have the asymptotic variance\n",
+    "\n",
+    "$$ \\frac {\\theta^2} {4n}$$"
    ]
   },
   {
@@ -265,7 +271,11 @@
     "$$f (x|θ ) = (θ + 1)x^θ , ~~~~~~~ 0 ≤ x ≤ 1$$\n",
     "\n",
     "\n",
-    "c. Find the asymptotic variance of the mle."
+    "c. Find the asymptotic variance of the mle.\n",
+    "\n",
+    "From the last homework, I found $\\partial^2_\\theta l(\\theta) = -n / (1+ \\theta)^2$ Therefore the asymptotic variance is \n",
+    "\n",
+    "$$\\frac {(1+ \\theta)^2} n $$ "
    ]
   },
   {
