it keeps going and going

--- a/mStat1/HW 3.ipynb
+++ b/mStat1/HW 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -16,7 +16,8 @@
     }
    ],
    "source": [
-    "%pylab inline"
+    "%pylab inline\n",
+    "from tools import repeat"
    ]
   },
   {
@@ -302,13 +303,141 @@
     "\n",
     "a. Find the mle of θ and its asymptotic variance.\n",
     "\n",
+    "$$l(\\theta) = \\ln n! - \\sum \\ln X_i! +X_1 \\ln .25(2 + θ ) + X_2 \\ln .25(1 − θ ) + X_3 \\ln .25(1 − θ ) +X_4 \\ln .25θ$$\n",
+    "\n",
+    "$$\\partial_{\\theta} l(\\theta) = 4*(X_1 /(2 + θ ) - X_2 /(1 − θ ) - X_3 /(1 − θ ) +X_4 /\\theta)$$\n",
+    "\n",
+    "Equating this to zero yields the following quadratic equation:\n",
+    "\n",
+    "$$\\theta^2 (-X_1 - X_2 -X_3 - X_4) + \\theta (X_1 - 2X_2 -2 X_3 - X_4) + 2 X_4 = 0$$\n",
+    "\n",
+    "With the data given, we have:\n",
+    "\n",
+    "$$-\\theta^2 (3839) - \\theta (1655) + 64 = 0$$\n",
+    "\n",
+    "Yielding 0.03571230224062816\n",
+    "\n",
+    "Taking the second derivative, yields:\n",
+    "\n",
+    "$$\\partial_{\\theta}^2 l(\\theta) = 4*(-X_1 /(2 + θ )^2 - X_2 /(1 − θ )^2 - X_3 /(1 − θ )^2 - X_4 /\\theta^2)$$\n",
+    "\n",
+    "Which means that the asymptotic variance is:\n",
+    "\n",
+    "1/110076.9 = 9.084558e-06\n",
+    "\n",
+    "\n",
     "b. Form an approximate 95% confidence interval for θ based on part (a).\n",
     "\n",
-    "c. Use the bootstrap to find the approximate standard deviation of the mle and\n",
-    "compare to the result of part (a).\n",
+    "$$(0.03571230224062816 - 0.003014059*1.96 , 0.03571230224062816 + 0.003014059*1.96) = (0.02980475, 0.04161986)$$\n",
     "\n",
+    "c. Use the bootstrap to find the approximate standard deviation of the mle and\n",
+    "compare to the result of part (a)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0058646865622500833"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta = 0.03571230224062816\n",
+    "p1 = .25*(2 + theta)\n",
+    "p2 = .25*(1 - theta)\n",
+    "p3 = .25*(1 - theta)\n",
+    "p4 = .25*theta\n",
+    "\n",
+    "@repeat(5000)\n",
+    "def get_estimate(n):\n",
+    "    counts = [0,0,0,0]\n",
+    "    for i in range(n):\n",
+    "        r = rand()\n",
+    "        if(r<p1): counts[0] += 1\n",
+    "        elif(r<p1+p2): counts[1] += 1\n",
+    "        elif(r<p1+p2+p3): counts[2] += 1\n",
+    "        else: counts[3] += 1\n",
+    "    a = - n\n",
+    "    b = counts[0] - 2*(counts[1]+counts[2]) - counts[3]\n",
+    "    c = 2*counts[3]    \n",
+    "    return ((-b - sqrt(b**2 - 4*a*c))/(2*a) - theta)**2\n",
+    "\n",
+    "    \n",
+    "sqrt(get_estimate(3839))   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hmmm.... apparently this is much closer to the answer in the back of the book. Not sure what to make of this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "d. Use the bootstrap to find an approximate 95% confidence interval and compare\n",
     "to part (b)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.945"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@repeat(1000)\n",
+    "def get_estimate(n):\n",
+    "\n",
+    "    counts = [0,0,0,0]\n",
+    "    for i in range(n):\n",
+    "        r = rand()\n",
+    "        if(r<p1): counts[0] += 1\n",
+    "        elif(r<p1+p2): counts[1] += 1\n",
+    "        elif(r<p1+p2+p3): counts[2] += 1\n",
+    "        else: counts[3] += 1\n",
+    "    a = - n\n",
+    "    b = counts[0] - 2*(counts[1]+counts[2]) - counts[3]\n",
+    "    c = 2*counts[3]  \n",
+    "    estimate = (-b - sqrt(b**2 - 4*a*c))/(2*a)\n",
+    "    if((estimate>0.02447) and (estimate<0.04687)):\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0\n",
+    "    \n",
+    "get_estimate(3839)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, again using the answer from the back of the book yields a decent answer"
    ]
   },
   {
