started chains and diffusion

--- a/spectral/Power Method.ipynb
+++ b/spectral/Power Method.ipynb
@@ -364,13 +364,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "From http://www.math.tamu.edu/~dallen/linear_algebra/chpt5.pdf\n",
+    "\n",
+    "###Finding Nondominant Eigenvalues\n",
+    "\n",
+    "Once the dominant eigenpair $(\\lambda_1, V_1)$ of $A$ has been computed, we may wish to compute $\\lambda_2$. If $A$ is symmetric, it can be proved that if $U_1 = V_1 / |V_1|$, then\n",
+    "\n",
+    "$$A^{(2)} = A - \\lambda_1 U_1 U_1^T$$\n",
+    "\n",
+    "has eigenvalues $0, \\lambda_2, \\lambda_3, ..., \\lambda_n$ "
+   ]
   }
  ],
  "metadata": {
