--- a/spectral/Power Method.ipynb
+++ b/spectral/Power Method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
        " 1.1429145457597656e-05)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
    "source": [
     "def hoffman_power(A):\n",
     "    n = A.shape[0]\n",
-    "    x = ones(n)\n",
+    "    x = ones(n) #note, this dies on the laplacian, see below\n",
     "    lmda = 0\n",
     "    for i in range(30):\n",
     "        last = lmda\n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -335,7 +335,7 @@
        "array([ 13.87058484,   8.62043436,   2.5089808 ])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,11 +356,36 @@
     "            r[i][i] = norm(a_prime)    \n",
     "            q[:,i] = a_prime/r[i][i]  \n",
     "        A = dot(r,q)\n",
-    "    return array([A[i][i] for i in range(n)])\n",
+    "    return array([around(A[i][i],8) for i in range(n)])\n",
     "    \n",
     "    \n",
     "A = array([[8,-2,-2],[-2,4,-2],[-2,-2,13]])    \n",
     "hoffman_QR(A)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3.  3.  0.]\n",
+      "[ 3.  3.  3.]\n",
+      "(array([  3.00000000e+00,  -1.03897411e-16,   2.82570034e-33]), array([[  5.77350269e-01,   6.76820788e-01,  -1.38045040e-16],\n",
+      "       [  5.77350269e-01,  -7.33929313e-01,  -7.07106781e-01],\n",
+      "       [  5.77350269e-01,   5.71085251e-02,   7.07106781e-01]]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hoffman_QR(array([[2,-1,-1],[-1,2,-1],[-1,-1,2]])))\n",
+    "print(hoffman_QR(array([[3,0,0],[0,3,0],[0,0,3]])))\n",
+    "print(eig(array([[1,1,1],[1,1,1],[1,1,1]]))) #note, Hoffman's gives an error"
    ]
   },
   {
@@ -379,6 +404,127 @@
     "\n",
     "has eigenvalues $0, \\lambda_2, \\lambda_3, ..., \\lambda_n$ "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  4.66449861e-17   4.38447187e-01   3.00000000e+00   3.00000000e+00\n",
+      "   3.00000000e+00   4.56155281e+00]\n",
+      "4.56155067632\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.43844718719117015"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = array([[2,-1,-1,0,0,0],[-1,2,-1,0,0,0],[-1,-1,3,-1,0,0],[0,0,-1,3,-1,-1],[0,0,0,-1,2,-1],[0,0,0,-1,-1,2]])\n",
+    "print(sort(eig(A)[0]))\n",
+    "\n",
+    "def hoffman_power(A):\n",
+    "    n = A.shape[0]\n",
+    "    x = zeros(n)\n",
+    "    x[0] = 1\n",
+    "    lmda = 0\n",
+    "    for i in range(40):\n",
+    "        last = lmda\n",
+    "        y = dot(A,x)\n",
+    "        lmda = y[0]\n",
+    "        x = y/lmda\n",
+    "    error = last - lmda    \n",
+    "    return (lmda, x, abs(error))    \n",
+    "\n",
+    "max_e_value = hoffman_power(A)[0]\n",
+    "print(max_e_value)\n",
+    "\n",
+    "#now we shift\n",
+    "A_1 = A - max_e_value*eye(6)\n",
+    "\n",
+    "#and then, we know that there is an eigenvalue with -max_e_value and all 1's eigenvector\n",
+    "A_2 = A_1 + max_e_value*outer(ones(6),ones(6))/6\n",
+    "\n",
+    "#and then we can calculate the second smallest eigenvalue easily: \n",
+    "hoffman_power(A_2)[0]+max_e_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.438447187191\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.46470513,  0.46470513,  0.26095647, -0.26095647, -0.46470513,\n",
+       "       -0.46470513])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e,v = eig(A)\n",
+    "print(e[3])\n",
+    "v[:,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.4647    ,  0.4647    ,  0.26095359, -0.26095359, -0.4647    ,\n",
+       "       -0.4647    ])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hoffman_power(A_2)[1]*0.4647"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
